--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
             <div class="col rightText">
                 <h2 id="ecran6" class="title-anchor distantdos" class="no-black">Notre équipe : </h2>
                 <div class="row team">
-                    <div class="col arière1">
+                    <div class="col ariere1">
                         <h3>Fabrice</h3>
                         <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA"
                             class="photoDeProfil">
-                        <p class="row rightText">Directeur & programmateur
+                        <p class="rightText">Directeur & programmateur
                             Bureau administratif
                             Cofondateur de Flip-Book
                             Et passionné d'animation</p>
@@ -292,33 +292,33 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col arière1">
+                    <div class="col ariere1">
                         <h3>Severine</h3>
                         <img src=img-portrait\3.png title="Severine" alt="Séverine" class="photoDeProfil">
-                        <p class="row rightText">Projectionniste & Animatrice
+                        <p class=" rightText">Projectionniste & Animatrice
                             Cinéma "Le Festival"
                             Accueil
                         </p>
                         <ul>
                             <li>
-                                <p class="row rightText">Contact :
+                                <p class=" rightText">Contact :
                                     05.56.51.76.60
                                     contact@cinemalefestival.fr</p>
                             </li>
                         </ul>
                     </div>
-                    <div class="col arière1">
+                    <div class="col ariere1">
                         <h3>Christoph</h3>
                         <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule"
                             class="photoDeProfil">
                         <div>
-                            <p class="row rightText">Projectionniste & Animateur
+                            <p class=" rightText">Projectionniste & Animateur
                                 Cinéma "Le Festival"
                                 Chef d'ateliers
                             </p>
                             <ul>
                                 <li>
-                                    <p class="row rightText">Contact :
+                                    <p class="rightText">Contact :
                                         05.56.51.76.60
                                         contact@cinemalefestival.fr</p>
                                 </li>
