--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="col">
                 <!-- texte de bienvenu-->
                 <h1 class="big">Bienvenue au Cinema Le Festival !</h1>
-                <h3 class="distantuno">Specialisé dans le cinéma d'animation <br> et d'effets spéciaux à Bègles !</h3>
+                <h3 class="distantuno">Spécialisé dans le cinéma d'animation <br> et d'effets spéciaux à Bègles !</h3>
             </div>
         </div>
 
@@ -136,7 +136,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <h2 id="ecran2" class="title-anchor distantdos ">Nos Évenements</h2>
+                <h2 id="ecran2" class="title-anchor distantdos ">Nos Événements</h2>
                 <div class="row">
 
                     <section class="vertical-center slider">
@@ -176,7 +176,7 @@
                     <div class="col arière2">
                         <section class="buttons2 ">
                             <span class="btn-2 btn-3 ">
-                                <p class="BS">Initiation dessin animés</p>
+                                <p class="BS">Initiation dessin animé</p>
                             </span>
                         </section>
                     </div>
@@ -265,63 +265,45 @@
         background-attachment: fixed;
         background-size: 100% 100%;">
 
-        <div class="row">
-            <div class="col">
-                <!-- div contact-->
-                <h2 class="title-anchor distantdos " class="black">Nos Contacts </h2>
-                <div class="rightText distantuno">
-                    <p>
-                        05.56.51.76.60
-                        contact@cinemalefestival.fr
-                        09.51.99.04.80
+            <div class="row">
+                <div class="col">
+                    <!-- div contact-->
+                    <h2 class="title-anchor distantdos " class="black">Nos Contacts </h2>
+                    <div class="rightText distantuno">
+                        <p>
+                            05.56.51.76.60
+                            contact@cinemalefestival.fr
+                            09.51.99.04.80
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
-            <!--div avec la team cinema-->
+            <div class="row">
+                <!--div avec la team cinema-->
 
-            <div class="col rightText">
-                <h2 id="ecran6" class="title-anchor distantdos" class="no-black">Notre équipe : </h2>
-                <div class="row team">
-                    <div class="col arière1">
-                        <h3>Fabrice</h3>
-                        <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA"
-                            class="photoDeProfil">
-                        <p class="row rightText">Directeur & programmateur
-                            Bureau administratif
-                            Cofondateur de Flip-Book
-                            Et passionné d'animation</p>
-                        <ul>
-                            <li>
-                                <p class="row rightText">Contact :
-                                    05.56.51.76.60
-                                    contact@cinemalefestival.fr</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col arière1">
-                        <h3>Severine</h3>
-                        <img src=img-portrait\3.png title="Severine" alt="Séverine" class="photoDeProfil">
-                        <p class="row rightText">Projectionniste & Animatrice
-                            Cinéma "Le Festival"
-                            Chef d'ateliers
-                        </p>
-                        <ul>
-                            <li>
-                                <p class="row rightText">Contact :
-                                    05.56.51.76.60
-                                    contact@cinemalefestival.fr</p>
-                            </li>
-                        </ul>
-
-                    </div>
-                    <div class="col arière1">
-                        <h3>Christoph</h3>
-                        <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule"
-                            class="photoDeProfil">
-                        <div>
-                            <p class="row rightText">Projectionniste & Animateur
+                <div class="col rightText">
+                    <h2 id="ecran6" class="title-anchor distantdos" class="no-black">Notre équipe : </h2>
+                    <div class="row team">
+                        <div class="col arière1">
+                            <h3>Fabrice</h3>
+                            <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA"
+                                class="photoDeProfil">
+                            <p class="row rightText">Directeur & programmateur
+                                Bureau administratif
+                                Cofondateur de Flip-Book
+                                Et passionné d'animation</p>
+                            <ul>
+                                <li>
+                                    <p class="row rightText">Contact :
+                                        05.56.51.76.60
+                                        contact@cinemalefestival.fr</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col arière1">
+                            <h3>Severine</h3>
+                            <img src=img-portrait\3.png title="Severine" alt="Séverine" class="photoDeProfil">
+                            <p class="row rightText">Projectionniste & Animatrice
                                 Cinéma "Le Festival"
                                 Chef d'ateliers
                             </p>
@@ -332,14 +314,32 @@
                                         contact@cinemalefestival.fr</p>
                                 </li>
                             </ul>
+
+                        </div>
+                        <div class="col arière1">
+                            <h3>Christoph</h3>
+                            <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule"
+                                class="photoDeProfil">
+                            <div>
+                                <p class="row rightText">Projectionniste & Animateur
+                                    Cinéma "Le Festival"
+                                    Chef d'ateliers
+                                </p>
+                                <ul>
+                                    <li>
+                                        <p class="row rightText">Contact :
+                                            05.56.51.76.60
+                                            contact@cinemalefestival.fr</p>
+                                    </li>
+                                </ul>
+                            </div>
+
                         </div>
 
                     </div>
-                   
                 </div>
             </div>
         </div>
-    </div>
     </div>
     </div>
 
@@ -362,7 +362,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class=col> <a href="#ecran0"><img src=img-logo\logo.png title="notre logo" alt="notre logo"></a></div>
+                <div class=col> <a href="#ecran0"><img src=img-logo\logo.png title="notre logo" alt="notre logo"></a>
+                </div>
                 <div class=col>
                     <p></p>
                 </div>
@@ -506,62 +507,7 @@
             });
         });
     </script>
-    $(document).on('ready', function() {
-    $(".vertical-center-4").slick({
-    dots: true,
-    vertical: true,
-    centerMode: true,
-    slidesToShow: 4,
-    slidesToScroll: 2
-    });
-    $(".vertical-center-3").slick({
-    dots: true,
-    vertical: true,
-    centerMode: true,
-    slidesToShow: 3,
-    slidesToScroll: 3
-    });
-    $(".vertical-center-2").slick({
-    dots: true,
-    vertical: true,
-    centerMode: true,
-    slidesToShow: 2,
-    slidesToScroll: 2
-    });
-    $(".vertical-center").slick({
-    dots: true,
-    vertical: true,
-    centerMode: true,
-    });
-    $(".vertical").slick({
-    dots: true,
-    vertical: true,
-    slidesToShow: 3,
-    slidesToScroll: 3
-    });
-    $(".regular").slick({
-    dots: true,
-    infinite: true,
-    slidesToShow: 3,
-    slidesToScroll: 3
-    });
-    $(".center").slick({
-    dots: true,
-    infinite: true,
-    centerMode: true,
-    slidesToShow: 5,
-    slidesToScroll: 3
-    });
-    $(".variable").slick({
-    dots: true,
-    infinite: true,
-    variableWidth: true
-    });
-    $(".lazy").slick({
-    lazyLoad: 'ondemand', // ondemand progressive anticipated
-    infinite: true
-    });
-    });
+
     </script>
 
     <script src="./js/main.js"></script>
