a second page joins your team

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </nav>
 
         <div class="container-fluid">
-            <div class="row" style="height: 100vh; text-align: center;padding-top: 15%;" id="ecran0">
+            <div class="row entitle"  id="ecran0">
                 <div class="col">
                     <!-- texte de bienvenu-->
                     <h1 class="big">Bienvenue au Cinema Le Festival !</h1>
