a second page joins your team

--- a/Film.html
+++ b/Film.html
@@ -99,7 +99,7 @@
                 <li><a href="#ecran4" class="puce puce4"> </a> </li>
                 <li><a href="#ecran5" class="puce puce5"> </a> </li>
                 <li><a href="#ecran6" class="puce puce6"> </a> </li>
-
+                <li><a href="#ecran7" class="puce puce7"> </a> </li>
             </ul>
         </nav>
     
