a second page joins your team

--- a/Film.html
+++ b/Film.html
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <div class="row men2">
-                            <div class="col">
+                            <div class="col" id="ecran1">
                                 <img src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
                             </div>
                         </div>
@@ -112,42 +112,6 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
-                    <h2 id="ecran1" class="title-anchor distantdos">Nos Films à l'affiche</h2>
-                    <div class="row">
-                        <section class="center slider2">
-                            <div>
-                                <a href="http://www.google.com"><img src="./Img-flm/100_loup/Affiche.jpg"></a>
-                            </div>
-                            <div>
-                                <a href="http://www.google.com"><img src="./Img-flm/Beetlejuice/Affiche.jpg"></a>
-                            </div>
-                            <div>
-                                <a href="http://www.google.com"><img src="./Img-flm/Black_Widow/Affiche.jpg"></a>
-                            </div>
-                            <div>
-                                <a href="http://www.google.com"><img src="./Img-flm/Dark_Shadow/Affiche.jpg"></a>
-                            </div>
-                            <div>
-                                <a href="http://www.google.com"><img src="./Img-flm/Frankenweenie/Affiche.jpg"></a>
-                            </div>
-                            <div>
-                                <a href="http://www.google.com"><img src="./Img-flm/Fritzi/Affiche.jpg"></a>
-                            </div>
-                            <div>
-                                <a href="http://www.google.com"><img
-                                        src="./Img-flm/La_chouette_en_toque/Affiche.jpg"></a>
-                            </div>
-                            <div>
-                                <a href="http://www.google.com"><img src="./Img-flm/Le_peuple_loup/Affiche.jpg"></a>
-                            </div>
-                            <div>
-                                <a href="http://www.google.com"><img
-                                        src="./Img-flm/Le_Quatuor_à_cornes/Affiche.jpg"></a>
-                            </div>
-                        </section>
-                    </div>
-                </div>
                 <div class="col">
                     <h2 id="ecran2" class="title-anchor distantdos">Nos Films d'animation</h2>
                     <div class="row">
@@ -364,6 +328,42 @@
                         </section>
                     </div>
                 </div>
+                <div class="col">
+                    <h2 id="ecran7" class="title-anchor distantdos">Nos Films à l'affiche</h2>
+                    <div class="row">
+                        <section class="center slider2">
+                            <div>
+                                <a href="http://www.google.com"><img src="./Img-flm/100_loup/Affiche.jpg"></a>
+                            </div>
+                            <div>
+                                <a href="http://www.google.com"><img src="./Img-flm/Beetlejuice/Affiche.jpg"></a>
+                            </div>
+                            <div>
+                                <a href="http://www.google.com"><img src="./Img-flm/Black_Widow/Affiche.jpg"></a>
+                            </div>
+                            <div>
+                                <a href="http://www.google.com"><img src="./Img-flm/Dark_Shadow/Affiche.jpg"></a>
+                            </div>
+                            <div>
+                                <a href="http://www.google.com"><img src="./Img-flm/Frankenweenie/Affiche.jpg"></a>
+                            </div>
+                            <div>
+                                <a href="http://www.google.com"><img src="./Img-flm/Fritzi/Affiche.jpg"></a>
+                            </div>
+                            <div>
+                                <a href="http://www.google.com"><img
+                                        src="./Img-flm/La_chouette_en_toque/Affiche.jpg"></a>
+                            </div>
+                            <div>
+                                <a href="http://www.google.com"><img src="./Img-flm/Le_peuple_loup/Affiche.jpg"></a>
+                            </div>
+                            <div>
+                                <a href="http://www.google.com"><img
+                                        src="./Img-flm/Le_Quatuor_à_cornes/Affiche.jpg"></a>
+                            </div>
+                        </section>
+                    </div>
+                </div>
                 
             </div>
 
@@ -374,7 +374,7 @@
         </div>
 
 
-        <footer id="ecran7" class="title-anchor">
+        <footer>
             <div class="container">
                 <div class="row">
                     <!--les boutons menu-->
