--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <!-- div avec les boutons-->
                     <div class="col">
                         <section class="buttons2 ">
-                            <span class="btn-2 btn-3 ">
+                            <span class="btn-2 btn-3 " style="background-image: url(./img-logo/animation.png);  background-position: center; background-size: inherit;">
                                 <p class="BS">Initiation dessin animés</p>
                             </span>
                         </section>
