--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
         </div>
     </div>
-        <div class="container-fluid container-cinema" id="testPart">
+        <div class="container-fluid container-cinema" >
             <div class="row">
                 <div class="col">
                     <h2 id="ecran4" class="title-anchor distantdos">Notre Cinéma</h2>
@@ -473,66 +473,7 @@
                 });
             });
         </script>
-        <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-        <script src="./caroussel_res/slick/slick.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript">
-            $(document).on('ready', function () {
-                $(".vertical-center-4").slick({
-                    dots: true,
-                    vertical: true,
-                    centerMode: true,
-                    slidesToShow: 4,
-                    slidesToScroll: 2
-                });
-                $(".vertical-center-3").slick({
-                    dots: true,
-                    vertical: true,
-                    centerMode: true,
-                    slidesToShow: 3,
-                    slidesToScroll: 3
-                });
-                $(".vertical-center-2").slick({
-                    dots: true,
-                    vertical: true,
-                    centerMode: true,
-                    slidesToShow: 2,
-                    slidesToScroll: 2
-                });
-                $(".vertical-center").slick({
-                    dots: true,
-                    vertical: true,
-                    centerMode: true,
-                });
-                $(".vertical").slick({
-                    dots: true,
-                    vertical: true,
-                    slidesToShow: 3,
-                    slidesToScroll: 3
-                });
-                $(".regular").slick({
-                    dots: true,
-                    infinite: true,
-                    slidesToShow: 3,
-                    slidesToScroll: 3
-                });
-                $(".center").slick({
-                    dots: true,
-                    infinite: true,
-                    centerMode: true,
-                    slidesToShow: 3,
-                    slidesToScroll: 3
-                });
-                $(".variable").slick({
-                    dots: true,
-                    infinite: true,
-                    variableWidth: true
-                });
-                $(".lazy").slick({
-                    lazyLoad: 'ondemand', // ondemand progressive anticipated
-                    infinite: true
-                });
-            });
-        </script>
+        
         
 
     </section>
