--- a/Film.html
+++ b/Film.html
@@ -54,7 +54,7 @@
                             <div class="col">
                                 <section class="buttons">
 
-                                    <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
+                                    <a href="Film.html" class="btn btn-1 btnanim">
                                         <p>Programmation</p>
                                     </a>
                             </div>
@@ -79,7 +79,9 @@
                         </div>
                         <div class="row men2">
                             <div class="col" id="ecran1">
-                                <img src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
+                                <a href="index.html" >
+                                    <img src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -111,7 +113,7 @@
                     <h1 class="tall">Voici notre selection de film :</h1>
                 </div>
             </div>
-            <div class="row">
+            <div class="row suit">
                 <div class="col">
                     <h2 id="ecran2" class="title-anchor distantdos">Nos Films d'animation</h2>
                     <div class="row">
