services stylé de ouf

--- a/index.html
+++ b/index.html
@@ -198,21 +198,21 @@
                     <div class="col">
                         <section class="buttons2 ">
                             <span class="btn-2 btn-3 " style="background-image: url(./img-logo/animation.png);  background-position: center; background-size: inherit;">
-                                <p class="BS">Initiation dessin animés</p>
+                                <p class="BS" style="position: absolute; padding-top: 150%;">Initiation dessin animés</p>
                             </span>
                         </section>
                     </div>
                     <div class="col ">
                         <section class="buttons2">
-                            <span class="btn-2 btn-3">
-                                <p class="BS">Stage réalisation</p>
+                            <span class="btn-2 btn-3"style="background-image: url(./img-logo/real.png);  background-position: center; background-size: inherit;">
+                                <p class="BS" style="position: absolute; padding-top: 150%;">Stage réalisation</p>
                             </span>
                         </section>
                     </div>
                     <div class="col ">
                         <section class="buttons2">
-                            <span class="btn-2 btn-3">
-                                <p class="BS">Projection à la demande</p>
+                            <span class="btn-2 btn-3"style="background-image: url(./img-logo/proj.png);  background-position: center; background-size: inherit;">
+                                <p class="BS" style="position: absolute; padding-top: 150%;">Projection à la demande</p>
                             </span>
                         </section>
                     </div>
@@ -221,6 +221,7 @@
                             <span class="btn-2 btn-3">
                                 <img src=img-logo\Flech-lien.svg title="voir plus de services"
                                     alt="voir plus de services" style="height: 40%;">
+                                    <p class="BS" style="position: absolute; padding-top: 150%;">Plus de services</p>
                             </span>
                         </section>
                     </div>
