services stylé de ouf

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>
 
 
-        <div id="ecran3" class="row serv">
+        <div id="ecran3" class="row serv" style="background-image:url(./img-logo/service_bg.png);">
             <div class="col">
                 <h2 class="title-anchor distantdos">Nos Services</h2>
                 <div class="container-fluid">
