--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     <section id="panels-container">
         <div class="panel panel--left">
             <svg xmlns="http://www.w3.org/2000/svg" width="1422.917" height="800" viewBox="0 0 1422.917 800">
-                <path id="slide_gauche" data-name="slide gauche"
-                    d="M0,0V800H1048.417c228.875-191.073,374.5-478.531,374.5-800Z" fill="#e74141" />
-            </svg>
+                <path id="slide_gauche" data-name="slide gauche" d="M0,0V800H1048.417c228.875-191.073,374.5-478.531,374.5-800Z" fill="#810000"/>
+              </svg>
+              
 
         </div>
         <div class="panel panel--right">
             <svg xmlns="http://www.w3.org/2000/svg" width="1422.917" height="800" viewBox="0 0 1422.917 800">
-                <path id="slide_droit" data-name="slide droit" d="M1422.917,0V800H374.5C145.625,608.927,0,321.469,0,0Z"
-                    fill="#e74141" />
-            </svg>
+                <path id="slide_droit" data-name="slide droit" d="M1422.917,0V800H374.5C145.625,608.927,0,321.469,0,0Z" fill="#810000"/>
+              </svg>
+              
 
         </div>
 
