--- a/index.html
+++ b/index.html
@@ -399,10 +399,12 @@
                     <div class=col>
                         <p></p>
                     </div>
-                    <div class=col><img src=img-logo\pngegg_(9).png title="notre page Facebook"
+                    <div class=col><img src=img-logo\pngegg_(9).png  title="notre page Facebook"
                             alt="notre page Facebook">
                     </div>
-                    <div class=col><img src=img-logo\pngegg_(10).png title="notre Instagram" alt="notre Instagram">
+                    <div class=col><a href="https://www.instagram.com/cinemalefestival/"> 
+                        <img src=img-logo\pngegg_(10).png title="notre Instagram" alt="notre Instagram">
+                    </a>
                     </div>
                 </div>
                 <div class="row">
