--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="row men2">
                             <div class="col">
                                 <a href="index.html" >
-                                    <img src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
+                                    <img class="logo" src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
                                 </a>
                                 
                             </div>
