--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="row men2">
                     <div class="col">
-                        <a href="index.html">
+                        <a href="index.html" class="btnanim">
                             <img class="logo" src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
                         </a>
 
