--- a/Film.html
+++ b/Film.html
@@ -56,8 +56,8 @@
                             <div class="col" id="ecran1">
                                 <section class="buttons">
 
-                                    <a href="Film.html" class="btn btn-1 btnanim">
-                                        <p>Programmation</p>
+                                    <a href="index.html" class="btn btn-1 btnanim">
+                                        <p>Accueil</p>
                                     </a>
                             </div>
                             <div class="col">
@@ -382,16 +382,16 @@
             <div class="container">
                 <div class="row">
                     <!--les boutons menu-->
-                    <a href="Film.html" class="col">
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Programmation</h3>
                     </a>
-                    <a href="Film.html" class="col">
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Notre Cinéma</h3>
                     </a>
-                    <a href="Film.html" class="col">
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Contact</h3>
                     </a>
-                    <a href="Film.html" class="col">
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Atelier</h3>
                     </a>
                 </div>
