--- a/index.html
+++ b/index.html
@@ -389,33 +389,32 @@
         </div>
 
 
-        <footer id="ecran7" class="title-anchor">
+        <footer id="bar2">
             <div class="container">
                 <div class="row">
                     <!--les boutons menu-->
-                    <div class="col">
-                        <h3>Programmation </h3>
-                    </div>
-                    <div class="col">
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
+                        <h3>Programmation</h3>
+                    </a>
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Notre Cinéma</h3>
-                    </div>
-                    <div class="col">
+                    </a>
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Contact</h3>
-                    </div>
-                    <div class="col">
+                    </a>
+                    <a href="Film.html" class="col" style="text-decoration: underline; color: white;">
                         <h3>Atelier</h3>
-                    </div>
+                    </a>
                 </div>
                 <div class="row">
-                    <div class=col> <a href="#ecran0"><img src=img-logo\logo.png title="notre logo"
+                    <div class=col> <a href="index.html"><img src=img-logo\logo.png title="notre logo"
                                 alt="notre logo"></a></div>
                     <div class=col>
                         <p></p>
                     </div>
                     <div class=col><a href="https://www.facebook.com/cinemalefestival">
-                    <img src=img-logo\pngegg_(9).png title="notre page Facebook"
-                            alt="notre page Facebook">
-                    </a>
+                            <img src=img-logo\pngegg_(9).png title="notre page Facebook" alt="notre page Facebook">
+                        </a>
                     </div>
                     <div class=col><a href="https://www.instagram.com/cinemalefestival/">
                             <img src=img-logo\pngegg_(10).png title="notre Instagram" alt="notre Instagram">
